@@ -135,6 +135,6 @@
 #mix = 70
 
 # default_pan = <val>
-# Default pan setting for 4-channel Amiga modules. Default is 100%
+# Default pan setting for 4-channel Amiga modules. Default is 50%
 #
-#default_pan = 100
+#default_pan = 50
